--- a/app/front/styles/styles.less
+++ b/app/front/styles/styles.less
@@ -1,13 +1,5 @@
-.x-page-header {
-  margin-bottom: 0;
-
-  .navbar-brand {
-    width: 23%;
-  }
-}
-
-.x-page-footer {
-  margin-bottom: 0;
+.navbar .navbar-brand {
+  width: 23%;
 }
 
 .x-page-container {
