--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -1,5 +1,5 @@
 {% raw %}
-<nav class="navbar navbar-inverse x-page-header" ng-controller="HeaderController">
+<nav class="navbar navbar-inverse" ng-controller="HeaderController">
   <div class="navbar-header navbar-header-full-width">
     <ul class="nav navbar-nav pull-right">
       <li><a href="http://fiscal.dataprotocols.org/spec/">Fiscal Data Package Spec</a></li>
