--- a/app/front/scripts/directives/templates/dimensions-group.html
+++ b/app/front/scripts/directives/templates/dimensions-group.html
@@ -1,3 +1,3 @@
 <div>
-  <sidebar-list items="hierarchy.dimensions" selected="[]" title="Group"></sidebar-list>
+  <sidebar-list items="hierarchy.dimensions" selected="dimensions.current.groups" title="Group"></sidebar-list>
 </div>
