--- a/app/front/scripts/directives/templates/sidebar-list.html
+++ b/app/front/scripts/directives/templates/sidebar-list.html
@@ -1,17 +1,17 @@
 <div ng-init="list.isCollapsed = true">
   <div class="list-group list-group-inverse">
     <a ng-click="list.isCollapsed = !list.isCollapsed" href="javascript:void(0);" class="list-group-item">
-      <i class="os-icon os-icon-filter_none"></i>
+      <i class="os-icon os-icon-filter"></i>
       {{ title }}
-      <i class="os-icon os-icon-chevron_right pull-right" ng-class="{expanded: !list.isCollapsed}"></i>
+      <i class="os-icon os-icon-arrow-down pull-right" ng-class="{expanded: !list.isCollapsed}"></i>
     </a>
   </div>
   <div ng-if="!list.isCollapsed" class="list-group list-group-inverse slide-animation">
     <a ng-repeat="item in items track by $index" href="javascript:void(0);"
-      ng-class="{active: selected.indexOf(item.key) >= 0}"
+      ng-class="{active: isSelected(item.key)}"
       ng-click="selectItem($event, item)"
       class="list-group-item">{{ item.name || item.value }}
-      <i ng-if="canClear && (selected.indexOf(item.key) >= 0)" ng-click="unselectItem($event, item)" class="os-icon os-icon-cancel pull-right"></i>
+      <i ng-if="canClear && isSelected(item.key)" ng-click="unselectItem($event, item)" class="os-icon os-icon-remove pull-right"></i>
     </a>
   </div>
 </div>
