--- a/app/front/styles/styles.less
+++ b/app/front/styles/styles.less
@@ -32,16 +32,17 @@
       margin-bottom: 0;
     }
 
-    .os-icon-cancel {
+    .os-icon-remove {
       font-size: 130%;
     }
 
-    .os-icon-chevron_right {
+    .os-icon-arrow-down {
       font-size: 130%;
       transition: transform 0.35s linear;
+      transform: rotate(-90deg);
 
       &.expanded {
-        transform: rotate(90deg);
+        transform: rotate(0deg);
       }
     }
   }
@@ -49,6 +50,7 @@
   .x-content {
     display: table-cell;
     width: 77%;
+    background: #f5f5f5;
   }
 }
 
@@ -74,30 +76,6 @@
     }
   }
 
-}
-
-.cursor-pointer {
-  cursor: pointer;
-}
-
-.margin-right-4 {
-  margin-right: 4px;
-}
-
-.margin-bottom-4 {
-  margin-bottom: 4px;
-}
-
-.margin-top-8 {
-  margin-top: 8px;
-}
-
-.margin-top-16 {
-  margin-top: 16px;
-}
-
-.margin-bottom-16 {
-  margin-bottom: 16px;
 }
 
 .dropdown .dropdown-menu {
@@ -139,6 +117,7 @@
   }
 
   .dropdown .dropdown-menu {
+    background: #f5f5f5;
     border: 0;
     border-bottom: 1px solid #e7e7e7;
     border-radius: 0;
@@ -250,13 +229,61 @@
   }
 }
 
-.charts .tab-content {
-  margin: 8px 0;
+.x-visualization-add {
+  border-style: dashed;
+  font-size: 200%;
+  margin: 0.5em 0;
+  padding: 0.25em;
+  color: silver;
+  cursor: pointer;
+  background: #fff;
 
-  .tab-pane {
+  &:hover,
+  &:active {
+    color: lighten(silver, 5%);
+  }
+}
+
+.x-visualization-container {
+  &.well {
+    background: #fff;
+    margin: 0.5em 0;
+  }
+
+  & > div {
+    position: relative;
+  }
+
+  .x-visualization-chart {
     max-width: 700px;
     position: relative;
   }
+
+  .x-visualization-buttons {
+    position: absolute;
+    top: 0;
+    right: 0;
+    white-space: nowrap;
+    font-size: 200%;
+    z-index: 999;
+
+    a {
+      & {
+        color: silver;
+        text-decoration: none;
+      }
+
+      &:hover,
+      &:active {
+        color: lighten(silver, 5%);
+        text-decoration: none;
+      }
+    }
+  }
+}
+
+.x-visualization-add-modal {
+  left: 23%;
 }
 
 .geoview-container {
