--- a/app/views/pages/main.html
+++ b/app/views/pages/main.html
@@ -23,92 +23,28 @@
     <available-packages items="state.availablePackages.items"
       selected="state.availablePackages" events="events"></available-packages>
     <div ng-if="!state.isPackageLoading">
-      <div class="row">
-        <div class="col-md-12 col-xs-12">
-          <h2>
-            <span>Views</span>
-            <div class="pull-right btn-group">
-              <button
-                class="fa fa-arrow-left btn btn-default"
-                ng-disabled="!events.canBack()"
-                type="button"
-                ng-click="events.back()"
-              ></button>
-              <button
-                class="fa fa-arrow-right btn btn-default"
-                ng-disabled="!events.canForward()"
-                type="button"
-                ng-click="events.forward()"
-              ></button>
-            </div>
-          </h2>
-        </div>
+      <div class="clearfix">
+        <h3>
+          <span>Views</span>
+          <div class="pull-right btn-group">
+            <button
+              class="os-icon os-icon-chevron-with-circle-left btn btn-default"
+              ng-disabled="!events.canBack()"
+              type="button"
+              ng-click="events.back()"
+            ></button>
+            <button
+              class="os-icon os-icon-chevron-with-circle-left os-icon-rotate-180 btn btn-default"
+              ng-disabled="!events.canForward()"
+              type="button"
+              ng-click="events.forward()"
+            ></button>
+          </div>
+        </h3>
+      </div>
 
-        <div class="col-md-12 col-xs-12 charts">
-          <uib-tabset>
-            <uib-tab heading="Treemap" ng-click="events.setTab('Treemap')">
-              <babbage ng-if="!state.flag.renderingCharts && currentTab == 'Treemap'"
-                endpoint="{{state.apiUrl}}"
-                cube="{{state.availablePackages.current}}"
-                state="state.babbageTreeMap">
-                <babbage-treemap></babbage-treemap>
-              </babbage>
-            </uib-tab>
-            <uib-tab heading="Pie Chart" ng-click="events.setTab('PieChart')">
-              <babbage ng-if="!state.flag.renderingCharts && currentTab == 'PieChart'"
-                endpoint="{{state.apiUrl}}"
-                cube="{{state.availablePackages.current}}"
-                state="state.babbageBar">
-                <pie-chart></pie-chart>
-              </babbage>
-            </uib-tab>
-            <uib-tab heading="Bar Chart" ng-click="events.setTab('BarChart')">
-              <babbage ng-if="!state.flag.renderingCharts && currentTab == 'BarChart'"
-                endpoint="{{state.apiUrl}}"
-                cube="{{state.availablePackages.current}}"
-                state="state.babbageBar">
-                <babbage-chart chart-type="bar"></babbage-chart>
-              </babbage>
-            </uib-tab>
-            <uib-tab heading="Line Chart" ng-click="events.setTab('LineChart')">
-              <babbage ng-if="!state.flag.renderingCharts && currentTab == 'LineChart'"
-                endpoint="{{state.apiUrl}}"
-                cube="{{state.availablePackages.current}}"
-                state="state.babbageBar">
-                <babbage-chart chart-type="line"></babbage-chart>
-              </babbage>
-            </uib-tab>
-            <uib-tab heading="Bubble Tree" ng-click="events.setTab('BubbleTree')">
-              <babbage ng-if="!state.flag.renderingCharts && currentTab == 'BubbleTree'"
-                endpoint="{{state.apiUrl}}"
-                cube="{{state.availablePackages.current}}"
-                state="state.babbageBar">
-                <bubble-tree></bubble-tree>
-              </babbage>
-            </uib-tab>
-            <uib-tab heading="Table" ng-click="events.setTab('Table')">
-              <babbage ng-if="!state.flag.renderingCharts && currentTab == 'Table'"
-                endpoint="{{state.apiUrl}}"
-                cube="{{state.availablePackages.current}}"
-                state="state.babbageTable">
-                <babbage-crosstab></babbage-crosstab>
-              </babbage>
-            </uib-tab>
-
-            <uib-tab heading="Map" ng-click="events.setTab('Map')"
-              ng-if="state.availablePackages.locationAvailable && state.availablePackages.locationSelected">
-              <babbage ng-if="!state.flag.renderingCharts && currentTab == 'Map'"
-                endpoint="{{state.apiUrl}}"
-                cube="{{state.availablePackages.current}}"
-                state="state.babbageBar">
-                  <babbage-geoview class="geoview-container"
-                    currency-sign="{{ state.availablePackages.currencySign }}"
-                    country-code="{{ state.availablePackages.locationCountry }}">
-                  </babbage-geoview>
-              </babbage>
-            </uib-tab>
-          </uib-tabset>
-        </div>
+      <div>
+        <visualizations state="state" events="events"></visualizations>
       </div>
 
       <package-info package-url="datapackage.json" resource-url="resource.csv"></package-info>
