--- a/app/front/styles/styles.less
+++ b/app/front/styles/styles.less
@@ -282,6 +282,18 @@
   }
 }
 
+.visualization-popover {
+  .btn {
+    display: block;
+    width: 100%;
+    margin-bottom: 0.3em;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+}
+
 .x-visualization-add-modal {
   left: 23%;
 }
