--- a/app/front/scripts/directives/templates/visualizations.html
+++ b/app/front/scripts/directives/templates/visualizations.html
@@ -174,9 +174,10 @@
       </div>
       <div class="modal-body">
         <div>
-          <a ng-repeat="item in getAvailableVisualizations()"
+          <a ng-repeat="item in availableVisualizations"
             class="x-visualization-item"
-            ng-click="addVisualization(item.id)" href="javascript:void(0);">
+            ng-class="{disabled: !item.isEnabled}"
+            ng-click="item.isEnabled ? addVisualization(item.id) : null" href="javascript:void(0);">
             {{ item.name }}
           </a>
         </div>
